chore: fix spacing for search icon

--- a/assets/scss/elements/_form-elements.scss
+++ b/assets/scss/elements/_form-elements.scss
@@ -34,6 +34,7 @@
     right: 0;
     height: 100%;
     width: 45px;
+    min-width: 45px;
     z-index: 3;
     cursor: pointer;
     pointer-events: none;
